# flask-yandex-app

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  run.py  Фишинг-сайт.pptx
core/: run.py
core/api/: routes.py
core/api/events/: __init__.py  routes.py
core/api/news/: routes.py
core/api/users/: routes.py
core/app/: __init__.py  admin.py  exceptions.py
core/app/cart/: models.py
core/app/events/: admin.py  models.py
core/app/news/: admin.py  models.py  services.py  use_cases.py
core/app/news/forms/: news.py
core/app/products/: models.py  services.py
core/app/users/: models.py
core/app/users/forms/: user.py
core/routes/: routes.py
core/routes/cart/: routes.py
core/routes/news/: routes.py
core/routes/products/: routes.py
docker_compose/: app.yaml  storages.yaml
instance/: database.db
media/img/: Sd7a315b3e89440b0a30bc59d47af602cF.avif
migrations/versions/: 174c7b94351a_.py  317ecf3e5525_.py  390d5e8923ae_.py  3aeff8707604_.py  abeaefd2f97d_.py  b0f16868f6e2_.py
static/css/: forms.css  index.css  pagination.css  styles.css
templates/: base.html  index.html  login.html  register.html
templates/cart/: cart.html
templates/news/: news-base-form.html  news-edit-page.html  news-item-add-form.html  news-item-edit-form.html  news-item.html  news.html
templates/products/: product-item.html  products.html
