[project]
name = "flask-yandex-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikhail Ovechkin",email = "hatedyoufromhello@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-admin (>=1.6.1,<2.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-restx (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
